--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "mongodb": "^3.6.6"
+    "mongodb": "^3.6.6",
+    "path": "^0.12.7"
   }
 }
